--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<p class="slider-point-item">2009</p>
 						<p class="slider-point-item">2016</p>
 					</div>
-					<div class="slide3-container">
+					<div class="slide3-container show-item3">
 						<div class="slide3-item3">
 							<h3>Звенья патогенеза СД2</h3>
 						</div>
