--- a/index.html
+++ b/index.html
@@ -20,55 +20,87 @@
 				<section class="slide1">
 					<h1>Всегда ли цели терапии СД2 на поверхности?</h1>
 
-					<svg class="mark-caption1" width="58" height="58">
+					<svg class="mark-caption1" width="58" height="58" viewBox="0 0 58 58">
 						<circle class="mark-caption-slice1"  r="28" cx="50%" cy="50%"></circle>
-						<circle class="mark-caption-slice2"  r="20" cx="50%" cy="50%"></circle>
+						<circle class="mark-caption-slice2"  r="20" cx="50%" cy="50%">
+							<animate attributeType="SVG" attributeName="r" begin="0s" dur="1.5s" repeatCount="indefinite" from="20" to="28"/>
+							<animate attributeType="CSS" attributeName="stroke-width" begin="0s"  dur="1.5s" repeatCount="indefinite" from="3%" to="0%" />
+              				<animate attributeType="CSS" attributeName="opacity" begin="0s"  dur="1.5s" repeatCount="indefinite" from="1" to="0"/>
+						</circle>
 						<defs>
 							<radialGradient id="grad1" cx="50%" cy="50%" r="50%" fx="50%" fy="50%">
 								<stop offset="0%" style="stop-color: #de771c; stop-opacity: 1" />
 			       				<stop offset="100%" style="stop-color: #d22a31; stop-opacity: 1"/>
 							</radialGradient>
 						</defs>
-						<circle class="mark-caption-slice3"  r="8" cx="50%" cy="50%"></circle>
+						<circle class="mark-caption-slice3"  r="8" cx="50%" cy="50%">
+							<animate attributeType="SVG" attributeName="r" begin="0s" dur="1.5s" repeatCount="indefinite" from="8" to="28"/>
+							<animate attributeType="CSS" attributeName="stroke-width" begin="0s"  dur="1.5s" repeatCount="indefinite" from="3%" to="0%" />
+              				<animate attributeType="CSS" attributeName="opacity" begin="0s"  dur="1.5s" repeatCount="indefinite" from="1" to="0"/>
+						</circle>
 					</svg>
 					<p class="caption1">Цель по HbA1c</p>
 
 					<svg class="mark-caption2" width="58" height="58">
 						<circle class="mark-caption-slice1"  r="14" cx="50%" cy="50%"></circle>
-						<circle class="mark-caption-slice2"  r="10" cx="50%" cy="50%"></circle>
+						<circle class="mark-caption-slice2"  r="10" cx="50%" cy="50%">
+							<animate attributeType="SVG" attributeName="r" begin="0s" dur="1.5s" repeatCount="indefinite" from="10" to="14"/>
+							<animate attributeType="CSS" attributeName="stroke-width" begin="0s"  dur="1.5s" repeatCount="indefinite" from="3%" to="0%" />
+              				<animate attributeType="CSS" attributeName="opacity" begin="0s"  dur="1.5s" repeatCount="indefinite" from="1" to="0"/>
+						</circle>
 						<defs>
 							<radialGradient id="grad1" cx="50%" cy="50%" r="50%" fx="50%" fy="50%">
 								<stop offset="0%" style="stop-color: #de771c; stop-opacity: 1" />
 			       				<stop offset="100%" style="stop-color: #d22a31; stop-opacity: 1"/>
 							</radialGradient>
 						</defs>
-						<circle class="mark-caption-slice3"  r="5" cx="50%" cy="50%"></circle>
+						<circle class="mark-caption-slice3"  r="5" cx="50%" cy="50%">
+							<animate attributeType="SVG" attributeName="r" begin="0s" dur="1.5s" repeatCount="indefinite" from="5" to="14"/>
+							<animate attributeType="CSS" attributeName="stroke-width" begin="0s"  dur="1.5s" repeatCount="indefinite" from="3%" to="0%" />
+              				<animate attributeType="CSS" attributeName="opacity" begin="0s"  dur="1.5s" repeatCount="indefinite" from="1" to="0"/>
+						</circle>
 					</svg>
 					<p class="caption2">Гипогликемия</p>
 
 					<svg class="mark-caption3" width="58" height="58">
 						<circle class="mark-caption-slice1"  r="8" cx="50%" cy="50%"></circle>
-						<circle class="mark-caption-slice2"  r="5" cx="50%" cy="50%"></circle>
+						<circle class="mark-caption-slice2"  r="5" cx="50%" cy="50%">
+							<animate attributeType="SVG" attributeName="r" begin="0s" dur="1.5s" repeatCount="indefinite" from="5" to="8"/>
+							<animate attributeType="CSS" attributeName="stroke-width" begin="0s"  dur="1.5s" repeatCount="indefinite" from="3%" to="0%" />
+              				<animate attributeType="CSS" attributeName="opacity" begin="0s"  dur="1.5s" repeatCount="indefinite" from="1" to="0"/>
+						</circle>
 						<defs>
 							<radialGradient id="grad1" cx="50%" cy="50%" r="50%" fx="50%" fy="50%">
 								<stop offset="0%" style="stop-color: #de771c; stop-opacity: 1" />
 			       				<stop offset="100%" style="stop-color: #d22a31; stop-opacity: 1"/>
 							</radialGradient>
 						</defs>
-						<circle class="mark-caption-slice3"  r="3" cx="50%" cy="50%"></circle>
+						<circle class="mark-caption-slice3"  r="3" cx="50%" cy="50%">
+							<animate attributeType="SVG" attributeName="r" begin="0s" dur="1.5s" repeatCount="indefinite" from="3" to="8"/>
+							<animate attributeType="CSS" attributeName="stroke-width" begin="0s"  dur="1.5s" repeatCount="indefinite" from="3%" to="0%" />
+              				<animate attributeType="CSS" attributeName="opacity" begin="0s"  dur="1.5s" repeatCount="indefinite" from="1" to="0"/>
+						</circle>
 					</svg>
 					<p class="caption3">Осложнения СД</p>
 
 					<svg class="mark-caption4" width="58" height="58">
 						<circle class="mark-caption-slice1"  r="8" cx="50%" cy="50%"></circle>
-						<circle class="mark-caption-slice2"  r="5" cx="50%" cy="50%"></circle>
+						<circle class="mark-caption-slice2"  r="5" cx="50%" cy="50%">
+							<animate attributeType="SVG" attributeName="r" begin="0s" dur="1.5s" repeatCount="indefinite" from="5" to="8"/>
+							<animate attributeType="CSS" attributeName="stroke-width" begin="0s"  dur="1.5s" repeatCount="indefinite" from="3%" to="0%" />
+              				<animate attributeType="CSS" attributeName="opacity" begin="0s"  dur="1.5s" repeatCount="indefinite" from="1" to="0"/>
+						</circle>
 						<defs>
 							<radialGradient id="grad1" cx="50%" cy="50%" r="50%" fx="50%" fy="50%">
 								<stop offset="0%" style="stop-color: #de771c; stop-opacity: 1" />
 			       				<stop offset="100%" style="stop-color: #d22a31; stop-opacity: 1"/>
 							</radialGradient>
 						</defs>
-						<circle class="mark-caption-slice3"  r="3" cx="50%" cy="50%"></circle>
+						<circle class="mark-caption-slice3"  r="3" cx="50%" cy="50%">
+							<animate attributeType="SVG" attributeName="r" begin="0s" dur="1.5s" repeatCount="indefinite" from="3" to="8"/>
+							<animate attributeType="CSS" attributeName="stroke-width" begin="0s"  dur="1.5s" repeatCount="indefinite" from="3%" to="0%" />
+              				<animate attributeType="CSS" attributeName="opacity" begin="0s"  dur="1.5s" repeatCount="indefinite" from="1" to="0"/>
+						</circle>
 					</svg>
 					<p class="caption4">СС риски</p>
 
