--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<a class="slide3-control" href="#"></a>
 			</div>
 
-			<div class="show-container">
+			<div class="show-container show-slide1">
 				<section class="slide1">
 					<h1>Всегда ли цели терапии СД2 на поверхности?</h1>
 
@@ -121,10 +121,10 @@
 
 				<section class="slide3">
 					<input type="range" min="1" max="100" value="100" class="range-slide">
-					<div class="slider-points">
-						<p class="slider-point-item">1988</p>
-						<p class="slider-point-item">2009</p>
-						<p class="slider-point-item">2016</p>
+					<div class="slider-date">
+						<p class="slider-date-item">1988</p>
+						<p class="slider-date-item">2009</p>
+						<p class="slider-date-item">2016</p>
 					</div>
 					<div class="slide3-container show-item3">
 						<div class="slide3-item3">
